# shader-desk

./: .gitignore  CMakeLists.txt  LICENSE  auto_config.json  config-manager.sh  config.json  flake.nix  run.sh  shell.nix
.cache/clangd/index/: audio-daemon-client.cpp.D66EB86A2781C485.idx  audio-daemon-client.hpp.F01CBAE386D9825E.idx  audio-data.hpp.D17D238D0DD9A5EF.idx  config-loader.cpp.FA9247971FC40955.idx  config-loader.hpp.FED703B35AD4D363.idx  hilbert-cube-effect.cpp.8E85A81290A50536.idx  hilbert-cube-effect.hpp.DBE8887B7B874EA0.idx  ico-sphere-effect.cpp.95F40404BC9C83C1.idx  ico-sphere-effect.hpp.18156E2B73AD76FA.idx  interactive-wallpaper.cpp.F7BE78F5E7009A2E.idx  interactive-wallpaper.hpp.842EDDBEEA4D7D40.idx  keyboard.cpp.69B69DD55893ADFE.idx  main.cpp.D5B8B041E80D0618.idx  main.cpp.F030792417B4389E.idx  plugin-interrogator.cpp.34061B2F910B8C05.idx  plugin-manager.cpp.25D7DF41395A7283.idx  plugin-manager.hpp.A534022B5F267913.idx  pointer-daemon-client.cpp.1F9EC696E62E0FFF.idx  pointer-daemon-client.hpp.721CEE7D34247024.idx  pulse-color-effect.cpp.D3E86033A196E99B.idx  pulse-color-effect.hpp.881A3E77A1B14985.idx  shader-utils.cpp.80B20C68DB11A45C.idx  shader-utils.hpp.1B5A987E040A06A8.idx  simple-wave-effect.cpp.699BD6F5AB5B48AA.idx  simple-wave-effect.hpp.109A671FBF3A8332.idx  utils.hpp.FA50D82D2CBA9B92.idx  wallpaper-effect.hpp.5198511667C41BA2.idx
docs/: PLUGIN_DEV_GUIDE_en.md  PLUGIN_DEV_GUIDE_ru.md  README.md  README_ru.md
example-conf/: config_gren.json  config_inside.json  config_normal.json  config_red.json  config_subnoise.json  config_twist.json
keyboard/: CMakeLists.txt  README.md  README_ru.md  old_main
oldplugins/hilbert-cube-effect/: hilbert-cube-effect.hpp
oldplugins/pulse-color-effect/: pulse-color-effect.cpp  pulse-color-effect.hpp
oldplugins/simple-wave-effect/: CMakeLists.txt  simple-wave-effect.cpp
oldplugins/simple-wave-effect/shaders/: wave_frag.glsl  wave_vert.glsl
plugins/: CMakeLists.txt  generate_plugin.py
plugins/glowing-points-effect/: CMakeLists.txt  glowing-points-effect.cpp  glowing-points-effect.hpp
plugins/glowing-points-effect/shaders/: sphere_frag.glsl  sphere_vert.glsl
plugins/hilbert-cube-effect/: CMakeLists.txt  hilbert-cube-effect.cpp
plugins/hilbert-cube-effect/shaders/: cube_frag.glsl  cube_vert.glsl
plugins/ico-sphere-effect/: CMakeLists.txt  ico-sphere-effect.cpp  ico-sphere-effect.hpp
plugins/ico-sphere-effect/shaders/: sphere_frag.glsl  sphere_vert.glsl
plugins/pulse-color-effect/: CMakeLists.txt
plugins/pulse-color-effect/shaders/: pulse_frag.glsl  pulse_vert.glsl
plugins/simple-wave-effect/: simple-wave-effect.hpp
plugins/templates/: CMakeLists.txt.template  plugin.cpp.template  plugin.hpp.template
src/: audio-daemon-client.cpp  audio-daemon-client.hpp  audio-data.hpp  config-loader.cpp  config-loader.hpp  config-manager.sh  interactive-wallpaper.cpp  interactive-wallpaper.hpp  keyboard.cpp  main.cpp  plugin-interrogator.cpp  plugin-manager.cpp  plugin-manager.hpp  pointer-daemon-client.cpp  pointer-daemon-client.hpp  shader-utils.cpp  shader-utils.hpp  utils.hpp  wallpaper-effect.hpp
